fixed alignment issues and mobile responsive issues with side nav and main content area

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -193,9 +193,9 @@ md-input-container.auth .md-input {
 /*************************************** LEFT SIDE-NAV ***************************************/
 
 md-sidenav.sideNavLeft--width {
-  width: 100% !important;
-  min-width: 100% !important;
-  max-width: 100% !important;
+  width: 230px !important;
+  min-width: 230px !important;
+  max-width: 230px !important;
 }
 
 .sideNavLeft__userCard {
